--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,24 @@
 	--color-dark-700: #0d0d0d;
 	--color-dark-900: #000000;
 
+	--color-danger-100: #ff8099;
+	--color-danger-300: #f23d61;
+	--color-danger-500: #cc1439;
+	--color-danger-700: #990f2b;
+	--color-danger-900: #660a1d;
+
+	--color-success-100: #80ffbf;
+	--color-success-300: #22e584;
+	--color-success-500: #14cc70;
+	--color-success-700: #0f9954;
+	--color-success-900: #0a6638;
+
+	--color-warning-100: #ffd073;
+	--color-warning-300: #e5ac39;
+	--color-warning-500: #d99000;
+	--color-warning-700: #960;
+	--color-warning-900: #640;
+
 	--font-roboto: "Roboto", sans-serif;
 	--font-inter: "Inter", sans-serif;
 }
