fix: input auto-complete and styles

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
 			-webkit-box-shadow: 0 0 0 1000px inset;
 			-webkit-text-fill-color: white;
 			border: 2px solid #4c4c4c;
-			transition: background-color 5000s ease-in-out 0s;
+			transition: background-color 5000s ease-in-out 200ms;
 		}
 		&:-webkit-autofill:active,
 		&:-webkit-autofill:focus {
